@@ -29,7 +29,79 @@ name|java
 operator|.
 name|util
 operator|.
+name|AbstractCollection
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|ArrayList
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Arrays
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collection
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collections
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Iterator
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|NoSuchElementException
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Set
 import|;
 end_import
 begin_import
@@ -153,6 +225,19 @@ operator|.
 name|index
 operator|.
 name|PrefixCodedTerms
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|Term
 import|;
 end_import
 begin_import
@@ -1485,6 +1570,188 @@ name|CELL_INSIDE_QUERY
 return|;
 block|}
 block|}
+block|}
+DECL|method|getPackedPoints
+specifier|public
+name|Collection
+argument_list|<
+name|byte
+index|[]
+argument_list|>
+name|getPackedPoints
+parameter_list|()
+block|{
+return|return
+operator|new
+name|AbstractCollection
+argument_list|<
+name|byte
+index|[]
+argument_list|>
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|Iterator
+argument_list|<
+name|byte
+index|[]
+argument_list|>
+name|iterator
+parameter_list|()
+block|{
+name|int
+name|size
+init|=
+operator|(
+name|int
+operator|)
+name|sortedPackedPoints
+operator|.
+name|size
+argument_list|()
+decl_stmt|;
+name|PrefixCodedTerms
+operator|.
+name|TermIterator
+name|iterator
+init|=
+name|sortedPackedPoints
+operator|.
+name|iterator
+argument_list|()
+decl_stmt|;
+return|return
+operator|new
+name|Iterator
+argument_list|<
+name|byte
+index|[]
+argument_list|>
+argument_list|()
+block|{
+name|int
+name|upto
+init|=
+literal|0
+decl_stmt|;
+annotation|@
+name|Override
+specifier|public
+name|boolean
+name|hasNext
+parameter_list|()
+block|{
+return|return
+name|upto
+operator|<
+name|size
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|byte
+index|[]
+name|next
+parameter_list|()
+block|{
+if|if
+condition|(
+name|upto
+operator|==
+name|size
+condition|)
+block|{
+throw|throw
+operator|new
+name|NoSuchElementException
+argument_list|()
+throw|;
+block|}
+name|upto
+operator|++
+expr_stmt|;
+name|BytesRef
+name|next
+init|=
+name|iterator
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+return|return
+name|Arrays
+operator|.
+name|copyOfRange
+argument_list|(
+name|next
+operator|.
+name|bytes
+argument_list|,
+name|next
+operator|.
+name|offset
+argument_list|,
+name|next
+operator|.
+name|length
+argument_list|)
+return|;
+block|}
+block|}
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|int
+name|size
+parameter_list|()
+block|{
+return|return
+operator|(
+name|int
+operator|)
+name|sortedPackedPoints
+operator|.
+name|size
+argument_list|()
+return|;
+block|}
+block|}
+return|;
+block|}
+DECL|method|getField
+specifier|public
+name|String
+name|getField
+parameter_list|()
+block|{
+return|return
+name|field
+return|;
+block|}
+DECL|method|getNumDims
+specifier|public
+name|int
+name|getNumDims
+parameter_list|()
+block|{
+return|return
+name|numDims
+return|;
+block|}
+DECL|method|getBytesPerDim
+specifier|public
+name|int
+name|getBytesPerDim
+parameter_list|()
+block|{
+return|return
+name|bytesPerDim
+return|;
 block|}
 annotation|@
 name|Override
