@@ -1065,6 +1065,64 @@ block|}
 block|}
 return|;
 block|}
+DECL|method|getField
+specifier|public
+name|String
+name|getField
+parameter_list|()
+block|{
+return|return
+name|field
+return|;
+block|}
+DECL|method|getNumDims
+specifier|public
+name|int
+name|getNumDims
+parameter_list|()
+block|{
+return|return
+name|numDims
+return|;
+block|}
+DECL|method|getBytesPerDim
+specifier|public
+name|int
+name|getBytesPerDim
+parameter_list|()
+block|{
+return|return
+name|bytesPerDim
+return|;
+block|}
+DECL|method|getLowerPoint
+specifier|public
+name|byte
+index|[]
+name|getLowerPoint
+parameter_list|()
+block|{
+return|return
+name|lowerPoint
+operator|.
+name|clone
+argument_list|()
+return|;
+block|}
+DECL|method|getUpperPoint
+specifier|public
+name|byte
+index|[]
+name|getUpperPoint
+parameter_list|()
+block|{
+return|return
+name|upperPoint
+operator|.
+name|clone
+argument_list|()
+return|;
+block|}
 annotation|@
 name|Override
 DECL|method|hashCode
